--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -21,18 +21,7 @@
 		<h1>Hello
 			{{ controller_name }}! ✅</h1>
 
-		This friendly message is coming from:
-		<ul>
-			<li>Your controller at
-				<code>
-					<a href="{{ 'C:/wamp64/www/workspace/ecv/m2/m2.ecv.puissance4-symphony/src/Controller/GameController.php'|file_link(0) }}">src/Controller/GameController.php</a>
-				</code>
-			</li>
-			<li>Your template at
-				<code>
-					<a href="{{ 'C:/wamp64/www/workspace/ecv/m2/m2.ecv.puissance4-symphony/templates/game/index.html.twig'|file_link(0) }}">templates/game/index.html.twig</a>
-				</code>
-			</li>
-		</ul>
+		<a href="play">Démarrer une partie</a>
+
 	</div>
 {% endblock %}
