--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -6,9 +6,16 @@
 			border-collapse: collapse;
 		}
 
+		.board__row {
+			display: flex;
+		}
+
 		.board__cell {
-			width: 25px;
-			height: 25px;
+			width: 65px;
+			height: 65px;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			border: 1px solid #000;
 		}
 
