--- a/templates/game/index.html.twig
+++ b/templates/game/index.html.twig
@@ -29,9 +29,8 @@
 	</style>
 
 	<h1>Puissance 4</h1>
-	<p>À vous de jouer
+	<p>Joueur en attente :
 		{{currentPlayer}}</p>
-
 	{# RESULT SECTION #}
 	{% if isEnd != null %}
 		<div class="end">
