add : assert on user

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,9 @@
 						<a href="/">Home</a>
 					</li>
 					<li>
+						<a href="/register">Créer un compte</a>
+					</li>
+					<li>
 						<a href="/login">Se connecter</a>
 					</li>
 				</ul>
