add : language switcher

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
 						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="/register">Créer un compte</a>
+						<a href="/register/fr">Créer un compte</a>
 					</li>
 					<li>
 						<a href="/login">Se connecter</a>
